mqtt event for async communication

--- a/HelpFiles/menu.html
+++ b/HelpFiles/menu.html
@@ -390,6 +390,7 @@
                         </ul>
                     </li>
                     <li><a href="About_Credits.html"><span>Credits</span></a></li>
+                    <li><a href="About_Telemetry.html"><span>Telemetry</span></a></li>
                     <li><a href="About_Donations.html"><span>Donations</span></a></li>
                     <li><a href="About_ChangeLog.html"><span>Change log</span></a></li>
                     <li><a href="About_History.html"><span>History</span></a></li>
