update stuff, probably need another readme tweak

--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.16.3.0</h2>
+<ul>
+	<li>Support change of hosting location for assets</li>
+	<li>New configuration setting to publish live telemetry data to an MQTT broker. A default broker is hosted at <a href="https://github.com/b4mad/racing">github.com/b4mad/racing</a>. More under Help &rarr; Telemetry</li>
+	<li>Iracing - fix some issues with battery charge reporting</li>
+	<li>RF2 - clear existing tyre change setting when starting a race</li>
+	<li>General bug fixes</li>
+</ul>
 <h2>Version 4.16.2.6</h2>
 <ul>
 	<li>Added 'Listen if not Pressed' as a speech recognition mode - the app will always listen for voice commands unless the assigned button is held down (useful for cases where that button activates some other program's voice input)</li>
