update stuff for 4.16.3.1

--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.16.3.1</h2>
+<ul>
+	<li>Fix missing 'conditions' data regression from previous release (weather, track temp etc)</li>
+	<li>Added option to report fuel remaining in number of laps, even for time-limited races ('Report fuel as laps left in timed races' in the Properties screen)</li>
+	<li>RF2 - added 'display next' voice command to move to the next MFD screen</li>
+	<li>ACC - corrected car speed data (use a more frequently updated value)</li>
+	<li>Various minor fixes</li>
+</ul>
 <h2>Version 4.16.3.0</h2>
 <ul>
 	<li>Support change of hosting location for assets</li>
