--- a/HelpFiles/VoiceRecognition_InstallationTraining.html
+++ b/HelpFiles/VoiceRecognition_InstallationTraining.html
@@ -44,7 +44,7 @@
 
       In Settings -> "Time and Language" click Language and add a language package - English (US) works well. Exit the Settings app and restart it, go back to Time and Language settings, then Speech. The language you just added should appear in the Speech Language drop down box, showing that it's available as a speech recognition language.<br><br>
 
-      That should be sufficient - start Crew Chief and see if it works. You might need to select English (US) as you speech language in the Time and Language settings screen.<br><br>
+      That should be sufficient - start Crew Chief and see if it works. You might need to select English (US) as your speech language in the Time and Language settings screen.<br><br>
 
       There's also a checkbox in the Speech settings for "Recognise non-native accents for this language". This may improve accuracy for some users.<br><br>
 
