--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.16.3.2</h2>
+<ul>
+	<li>GTR2 plugin update</li>
+	<li>Allow MQTT broker responses to trigger arbitrary text-to-speech responses</li>
+	<li>Various minor fixes</li>
+</ul>
 <h2>Version 4.16.3.1</h2>
 <ul>
 	<li>Fix missing 'conditions' data regression from previous release (weather, track temp etc)</li>
