--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.16.3.4</h2>
+<ul>
+  <li>GTR2 plugin update</li>
+  <li>Added basic support for AMS2 full course yellow flags</li>
+  <li>Various minor fixes</li>
+</ul>
 <h2>Version 4.16.3.2</h2>
 <ul>
   <li>GTR2 plugin update</li>
