readme and update stuff

--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.16.3.5</h2>
+<ul>
+  <li>R3E - fix missing ADAC 2021 GT3 class mapping</li>
+  <li>GTR2 plugin update</li>
+  <li>Added more channels to MQTT telemetry output</li>
+  <li>Various minor fixes</li>
+</ul>
 <h2>Version 4.16.3.4</h2>
 <ul>
   <li>GTR2 plugin update</li>
