--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <h2>Version 4.16.4.1</h2>
+    <h2>Version 4.17.0.0</h2>
     <ul>
-        <li>Use fuzzy matching to find names close to the player's name.
+        <li>Use FuzzySharp to find names close to the player's name - the My Name popup now allows you to enter your name and the app will suggest possible matches for this.
             It sets<b> Allow opponent names in 'My name' list</b> Property if necessary</li>
-        <li>Also used for unknown opponent names<br></li>
-        <li>MQTT parses JSON messages with priority and distance at which the message should be played. Added car model to ACC<br></li>
-        <li>Tsukuba track mapped</li>
-        <li>Correct the Group C brake type</li>
+        <li>Allow fuzzy and phonic matching for opponent driver names</li>
+        <li>MQTT parses JSON messages with priority and distance at which the message should be played</li>
         <li>Plugin installer now sets folder browser root to My Computer instead of Desktop</li>
-        <li>AMS2 - use US terms for indycars, low downforce Indy and F1 car classes</li>
-        <li>GTR2 - update plugin to v2.6.0.0</li>
-        <li>iRacing - LMDH added, Formula Ford 1600 added</li>
-        <li>R3E - brake temp thresholds from game rather than invented ones</li>
-        <li>rF2 - update rFactor2SharedMemoryMapPlugin64.dll to 3.7.15.1</li>
+		<li>RF2 - Update rFactor2SharedMemoryMapPlugin64.dll to 3.7.15.1</li>
+		<li>ACC - Added car model to data</li>
+		<li>R3E - use game provided brake temperature thresholds</li>
+		<li>AMS2 - Use US terms for AMS2's indycars, some car class corrections</li>
+		<li>iRacing - Tsukuba track mapped, LMDH added, Formula Ford 1600 added</li>
+		<li>GTR2 - Updated plugin</li>
+		<li>various minor fixes</li>
     </ul>
     <h2>Version 4.16.3.5</h2>
     <ul>
