--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -5,7 +5,7 @@
     <ul>
         <li>Use FuzzySharp to find names close to the player's name - the My Name popup now allows you to enter your name and the app will suggest possible matches for this.
             It sets<b> Allow opponent names in 'My name' list</b> Property if necessary</li>
-        <li>Allow fuzzy and phonic matching for opponent driver names</li>
+        <li>Allow fuzzy and phonic matching for opponent driver names - enabled by default, can be toggled off with the 'Fuzzy opponent name matching' property</li>
         <li>MQTT parses JSON messages with priority and distance at which the message should be played</li>
         <li>Plugin installer now sets folder browser root to My Computer instead of Desktop</li>
 		<li>RF2 - Update rFactor2SharedMemoryMapPlugin64.dll to 3.7.15.1</li>
