--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
+    <h2>Version 4.17.1.0</h2>
+    <ul>
+        <li>Rework opponent name matching to be more accurate and more conservative</li>
+        <li>Added UI to modify suppress or manually override guessed opponent name matches ("Opponent Names" from the app's menu bar) - restart the app after making changes to guessed opponent name matches</li>
+    </ul>
     <h2>Version 4.17.0.0  </h2>
     <ul>
         <li>Use FuzzySharp and Phonix to find names close to the player's name - the My Name popup now allows you to enter your name and the app will suggest possible matches for this.
