--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
 <body>
+    <h2>Version 4.17.1.1</h2>
+    <ul>
+        <li>Correct some bugs in the driver name mapping which was preventing some valid driver names from being read</li>
+        <li>Speech recognition bug fixes for driver names - note this includes removing the short position phrases ("who's in P1", "where's P12" etc) - use the longer versions ("who's in position 1", "where's position 12" etc) instead</li>
+        <li>GTR2 - plugin update</li>
+    </ul>
     <h2>Version 4.17.1.0</h2>
     <ul>
         <li>Rework opponent name matching to be more accurate and more conservative</li>
         <li>Added UI to modify suppress or manually override guessed opponent name matches ("Opponent Names" from the app's menu bar)</li>
     </ul>
-    <h2>Version 4.17.0.0  </h2>
+    <h2>Version 4.17.0.0</h2>
     <ul>
         <li>Use FuzzySharp and Phonix to find names close to the player's name - the My Name popup now allows you to enter your name and the app will suggest possible matches for this.
             It sets 'Allow opponent names in 'My name' list' Property if necessary</li>
