--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
+    <h2>Version 4.17.1.2</h2>
+    <ul>
+        <li>Fixed TTS (text-to-speech) for driver names</li>
+        <li>Fix some speech recognition issues and reinstated the short position phrases disabled in the last release</li>
+    </ul>
     <h2>Version 4.17.1.1</h2>
     <ul>
         <li>Correct some bugs in the driver name mapping which was preventing some valid driver names from being read</li>
