wire up AMS2 tyre pressures; update stuff including driver name update

--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
+    <h2>Version 4.17.1.4</h2>
+    <ul>
+        <li>Fix some issues with fuel reporting</li>
+        <li>Some MQTT telemetry improvements</li>
+        <li>AMS2 - wire up tyre pressures</li>
+        <li>R3E - use game-provided car dimensions for spotter</li>
+        <li>GTR2 - plugin update</li>
+    </ul>
     <h2>Version 4.17.1.2</h2>
     <ul>
         <li>Fixed TTS (text-to-speech) for driver names</li>
